--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "rholang",
-    "displayName": "Rholang",
+    "name": "f1r3fly-io-rholang",
+    "displayName": "Rholang (F1R3FLY.io)",
     "description": "Language support for Rholang.",
     "version": "0.0.1",
     "publisher": "F1R3FLY-io",
     "repository": {
         "type": "git",
-        "url": "https://github.com/F1R3FLY-io/lfortran-vscode-client"
+        "url": "https://github.com/F1R3FLY-io/rholang-vscode-client"
     },
     "engines": {
         "vscode": "^1.99.1"
